// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 goDPwY Tabs__TabButton-sc-1aqycph-0 jSVuAs"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 1
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 2
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 3
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 4
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 5
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 4`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 MySoG"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 goDPwY Tabs__TabButton-sc-1aqycph-0 jSVuAs"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 5`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 6`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="user"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-cog fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="cog"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M452.515 237l31.843-18.382c9.426-5.441 13.996-16.542 11.177-27.054-11.404-42.531-33.842-80.547-64.058-110.797-7.68-7.688-19.575-9.246-28.985-3.811l-31.785 18.358a196.276 196.276 0 0 0-32.899-19.02V39.541a24.016 24.016 0 0 0-17.842-23.206c-41.761-11.107-86.117-11.121-127.93-.001-10.519 2.798-17.844 12.321-17.844 23.206v36.753a196.276 196.276 0 0 0-32.899 19.02l-31.785-18.358c-9.41-5.435-21.305-3.877-28.985 3.811-30.216 30.25-52.654 68.265-64.058 110.797-2.819 10.512 1.751 21.613 11.177 27.054L59.485 237a197.715 197.715 0 0 0 0 37.999l-31.843 18.382c-9.426 5.441-13.996 16.542-11.177 27.054 11.404 42.531 33.842 80.547 64.058 110.797 7.68 7.688 19.575 9.246 28.985 3.811l31.785-18.358a196.202 196.202 0 0 0 32.899 19.019v36.753a24.016 24.016 0 0 0 17.842 23.206c41.761 11.107 86.117 11.122 127.93.001 10.519-2.798 17.844-12.321 17.844-23.206v-36.753a196.34 196.34 0 0 0 32.899-19.019l31.785 18.358c9.41 5.435 21.305 3.877 28.985-3.811 30.216-30.25 52.654-68.266 64.058-110.797 2.819-10.512-1.751-21.613-11.177-27.054L452.515 275c1.22-12.65 1.22-25.35 0-38zm-52.679 63.019l43.819 25.289a200.138 200.138 0 0 1-33.849 58.528l-43.829-25.309c-31.984 27.397-36.659 30.077-76.168 44.029v50.599a200.917 200.917 0 0 1-67.618 0v-50.599c-39.504-13.95-44.196-16.642-76.168-44.029l-43.829 25.309a200.15 200.15 0 0 1-33.849-58.528l43.819-25.289c-7.63-41.299-7.634-46.719 0-88.038l-43.819-25.289c7.85-21.229 19.31-41.049 33.849-58.529l43.829 25.309c31.984-27.397 36.66-30.078 76.168-44.029V58.845a200.917 200.917 0 0 1 67.618 0v50.599c39.504 13.95 44.196 16.642 76.168 44.029l43.829-25.309a200.143 200.143 0 0 1 33.849 58.529l-43.819 25.289c7.631 41.3 7.634 46.718 0 88.037zM256 160c-52.935 0-96 43.065-96 96s43.065 96 96 96 96-43.065 96-96-43.065-96-96-96zm0 144c-26.468 0-48-21.532-48-48 0-26.467 21.532-48 48-48s48 21.533 48 48c0 26.468-21.532 48-48 48z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 cgiVER Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
        id={null}
        rows={null}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-file-alt fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 gwuEuD"
          color={null}
          data-icon="file-alt"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 384 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M288 248v28c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-28c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm-12 72H108c-6.6 0-12 5.4-12 12v28c0 6.6 5.4 12 12 12h168c6.6 0 12-5.4 12-12v-28c0-6.6-5.4-12-12-12zm108-188.1V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V48C0 21.5 21.5 0 48 0h204.1C264.8 0 277 5.1 286 14.1L369.9 98c9 8.9 14.1 21.2 14.1 33.9zm-128-80V128h76.1L256 51.9zM336 464V176H232c-13.3 0-24-10.7-24-24V48H48v416h288z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </section>
    </button>
  </section>
</div>
`;

exports[` 7`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kKYaBx Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jCHZDn"
          id={null}
          label="1"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            1
          </label>
        </div>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kKYaBx Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jCHZDn"
          id={null}
          label="87"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            87
          </label>
        </div>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kKYaBx Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
        <div
          className="Tag__TagContainer-sc-128kb3h-0 jCHZDn"
          id={null}
          label="2"
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
            fontSize="0.65em"
            fontWeight={600}
            htmlFor={null}
            letterSpacing="0.6px"
          >
            2
          </label>
        </div>
      </section>
    </button>
  </section>
</div>
`;

exports[` 8`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id="segment_1"
      name="segment_1"
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Option 1
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kkiedv Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={true}
      htmlFor={null}
      id="segment_2"
      name="segment_2"
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Option 2
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id="segment_3"
      name="segment_3"
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Option 3
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 goDPwY Tabs__TabButton-sc-1aqycph-0 jSVuAs"
      disabled={false}
      htmlFor={null}
      id="segment_4"
      name="segment_4"
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Option 4
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 9`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={true}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kkiedv Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kkiedv Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kkiedv Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 10`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 kkiedv Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={true}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="-1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id={null}
      name={null}
      onClick={null}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab
        </label>
      </section>
    </button>
  </section>
</div>
`;

exports[` 11`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Tabs__TabsWrapper-sc-1aqycph-1 eSSOFa"
    disabled={false}
    id={null}
  >
    <button
      className="Button__StyledButton-sc-1v7sls2-0 goDPwY Tabs__TabButton-sc-1aqycph-0 jSVuAs"
      disabled={false}
      htmlFor={null}
      id="Tab 1"
      name="Tab 1"
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 1
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id="Tab 2"
      name="Tab 2"
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 2
        </label>
      </section>
    </button>
    <button
      className="Button__StyledButton-sc-1v7sls2-0 bffbOb Tabs__TabButton-sc-1aqycph-0 gzDOzw"
      disabled={false}
      htmlFor={null}
      id="Tab 3"
      name="Tab 3"
      onClick={[Function]}
      tabIndex="1"
      type="button"
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
        id={null}
        rows={null}
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 jQIxhe"
          fontSize="0.876em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.2px"
        >
          Tab 3
        </label>
      </section>
    </button>
  </section>
</div>
`;
